--- a/pages/person/user.html
+++ b/pages/person/user.html
@@ -17,11 +17,11 @@ Coded by www.creative-tim.com
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    Paper Dashboard 2 by Creative Tim
+    All Med
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -40,7 +40,7 @@ Coded by www.creative-tim.com
       <div class="logo">
         <a href="https://www.creative-tim.com" class="simple-text logo-mini">
           <div class="logo-image-small">
-            <img src="../assets/img/logo-small.png">
+            <img src="../../assets/img/logo-small.png">
           </div>
           <!-- <p>CT</p> -->
         </a>
@@ -174,7 +174,7 @@ Coded by www.creative-tim.com
           <div class="col-md-4">
             <div class="card card-user">
               <div class="image">
-                <img src="../assets/img/damir-bosnjak.jpg" alt="...">
+                <img src="../../assets/img/damir-bosnjak.jpg" alt="...">
               </div>
               <div class="card-body">
                 <div class="author">
@@ -232,11 +232,11 @@ Coded by www.creative-tim.com
                       </div>
                     </div>
                   </li>
-                  <li>
+                  <!--<li>
                     <div class="row">
                       <div class="col-md-2 col-2">
                         <div class="avatar">
-                          <img src="../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                          <img src="../../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                         </div>
                       </div>
                       <div class="col-md-7 col-7">
@@ -253,7 +253,7 @@ Coded by www.creative-tim.com
                     <div class="row">
                       <div class="col-md-2 col-2">
                         <div class="avatar">
-                          <img src="../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                          <img src=" ../../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                         </div>
                       </div>
                       <div class="col-ms-7 col-7">
@@ -265,7 +265,7 @@ Coded by www.creative-tim.com
                         <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
                       </div>
                     </div>
-                  </li>
+                  </li>-->
                 </ul>
               </div>
             </div>
@@ -273,83 +273,89 @@ Coded by www.creative-tim.com
           <div class="col-md-8">
             <div class="card card-user">
               <div class="card-header">
-                <h5 class="card-title">Edit Profile</h5>
+                <h5 class="card-title">Perfil</h5>
               </div>
               <div class="card-body">
                 <form>
                   <div class="row">
                     <div class="col-md-5 pr-1">
                       <div class="form-group">
-                        <label>Company (disabled)</label>
-                        <input type="text" class="form-control" disabled="" placeholder="Company" value="Creative Code Inc.">
+                        <label>Código</label>
+                        <input type="code" class="form-control" disabled="" placeholder="Company" value="1651AD">
                       </div>
                     </div>
                     <div class="col-md-3 px-1">
                       <div class="form-group">
-                        <label>Username</label>
-                        <input type="text" class="form-control" placeholder="Username" value="michael23">
+                        <label>Ocupação</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Username" value="Empregado">
                       </div>
                     </div>
                     <div class="col-md-4 pl-1">
                       <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" placeholder="Email">
+                        <label for="exampleInputEmail1">Email</label>
+                        <input type="email" class="form-control" disabled="" placeholder="Murilo.ps069@gmail.com">
                       </div>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-md-6 pr-1">
                       <div class="form-group">
-                        <label>First Name</label>
-                        <input type="text" class="form-control" placeholder="Company" value="Chet">
+                        <label>Nome</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Company" value="Murilo">
                       </div>
                     </div>
                     <div class="col-md-6 pl-1">
                       <div class="form-group">
-                        <label>Last Name</label>
-                        <input type="text" class="form-control" placeholder="Last Name" value="Faker">
+                        <label>Sobrenome</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Last Name" value="Pereira da Silva">
                       </div>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-6 pr-1">
                       <div class="form-group">
-                        <label>Address</label>
-                        <input type="text" class="form-control" placeholder="Home Address" value="Melbourne, Australia">
+                        <label>Endereço</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Home Address" value="Rua Francisco Franco do Nascimento 220">
+                      </div>
+                    </div>
+                    <div class="col-md-6 pl-1">
+                      <div class="form-group">
+                        <label>Complemento</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Home Address" value="Casa 71">
                       </div>
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-4 pr-1">
+                    <div class="col-md-6 pr-1">
                       <div class="form-group">
-                        <label>City</label>
-                        <input type="text" class="form-control" placeholder="City" value="Melbourne">
+                        <label>Cidade</label>
+                        <input type="text" class="form-control" disabled="" placeholder="City" value="Marília">
                       </div>
                     </div>
-                    <div class="col-md-4 px-1">
+                    <!--<div class="col-md-4 px-1">
                       <div class="form-group">
                         <label>Country</label>
                         <input type="text" class="form-control" placeholder="Country" value="Australia">
                       </div>
-                    </div>
-                    <div class="col-md-4 pl-1">
+                    </div>-->
+                    <div class="col-md-6 pl-1">
                       <div class="form-group">
-                        <label>Postal Code</label>
-                        <input type="number" class="form-control" placeholder="ZIP Code">
+                        <label>Numero Pessoal</label>
+                        <input type="text" class="form-control" id="inputNumber" disabled="" placeholder="selphone" value="(14) 99901-4563">
                       </div>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col-md-12">
                       <div class="form-group">
-                        <label>About Me</label>
-                        <textarea class="form-control textarea">Oh so, your weak rhyme You doubt I'll bother, reading into it</textarea>
+                        <label>Obsevação</label>
+                        <textarea class="form-control textarea" disabled="">Saudavel</textarea>
                       </div>
                     </div>
                   </div>
                   <div class="row">
                     <div class="update ml-auto mr-auto">
-                      <button type="submit" class="btn btn-primary btn-round">Update Profile</button>
+                      <button type="submit" class="btn btn-primary btn-round"><a href="formUser.html" style="color: white;"> Atualizar perfil</a></button>
                     </div>
                   </div>
                 </form>
