adição dos estados, correção nos formulários e alteração no nome

--- a/pages/person/user.html
+++ b/pages/person/user.html
@@ -21,7 +21,7 @@ Coded by www.creative-tim.com
   <link rel="icon" type="image/png" href="../../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    All Med
+    MED-center
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -45,7 +45,7 @@ Coded by www.creative-tim.com
           <!-- <p>CT</p> -->
         </a>
         <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-          All med
+          MED-center
           <!-- <div class="logo-image-big">
             <img src="../assets/img/logo-big.png">
           </div> -->
@@ -179,7 +179,7 @@ Coded by www.creative-tim.com
               <div class="card-body">
                 <div class="author">
                   <a href="#">
-                    <img class="avatar border-gray" src="../../assets/img/mike.jpg" alt="...">
+                    <img class="avatar border-gray" src="../../assets/img/its_me.jpeg" alt="...">
                     <h5 class="title">Murilo Pereira</h5>
                   </a>
                   <p class="description">
@@ -196,8 +196,8 @@ Coded by www.creative-tim.com
                 <hr>
                 <div class="button-container">
                   <div class="row">
-                    <div class="col-lg-3 col-md-6 col-6 ml-auto">
-                      <h5>12<br><small>Files</small></h5>
+                    <div class="col-lg-5 col-md-6 col-6 ml-auto">
+                      <h5>21/04/1995<br><small>Data de Nascimento</small></h5>
                     </div>
                     <div class="col-lg-4 col-md-6 col-6 ml-auto mr-auto">
                       <h5>2GB<br><small>Used</small></h5>
@@ -219,30 +219,15 @@ Coded by www.creative-tim.com
                     <div class="row">
                       <div class="col-md-2 col-2">
                         <div class="avatar">
-                          <img src="../../assets/img/faces/ayo-ogunseinde-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                          <img src="../../assets/img/logo-unimed.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
                         </div>
                       </div>
                       <div class="col-md-7 col-7">
                         Unimed
                         <br />
-                        <span class="text-muted"><small>Offline</small></span>
-                      </div>
-                      <div class="col-md-3 col-3 text-right">
-                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
-                      </div>
-                    </div>
-                  </li>
-                  <!--<li>
-                    <div class="row">
-                      <div class="col-md-2 col-2">
-                        <div class="avatar">
-                          <img src="../../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                        </div>
-                      </div>
-                      <div class="col-md-7 col-7">
-                        Creative Tim
-                        <br />
-                        <span class="text-success"><small>Available</small></span>
+                        <span class="text-muted"><small>Demitido</small></span>
+                        <br>
+                        <span class="text-muted"><small>Inicio 21/11/2015 Fim 21/08/20017</small>
                       </div>
                       <div class="col-md-3 col-3 text-right">
                         <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
@@ -250,6 +235,25 @@ Coded by www.creative-tim.com
                     </div>
                   </li>
                   <li>
+                    <div class="row">
+                      <div class="col-md-2 col-2">
+                        <div class="avatar">
+                          <img src="../../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                        </div>
+                      </div>
+                      <div class="col-md-7 col-7">
+                        MED-center
+                        <br />
+                        <span class="text-success"><small>Funcionário</small></span>
+                        <br />
+                        <span class="text-success"><small>Inicio 13/03/2020</small>
+                      </div>
+                      <div class="col-md-3 col-3 text-right">
+                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                      </div>
+                    </div>
+                  </li>
+                  <!--<li>
                     <div class="row">
                       <div class="col-md-2 col-2">
                         <div class="avatar">
@@ -298,17 +302,23 @@ Coded by www.creative-tim.com
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-6 pr-1">
+                    <div class="col-md-3 pr-1">
                       <div class="form-group">
                         <label>Nome</label>
                         <input type="text" class="form-control" disabled="" placeholder="Company" value="Murilo">
                       </div>
                     </div>
-                    <div class="col-md-6 pl-1">
+                    <div class="col-md-4 px-1">
                       <div class="form-group">
                         <label>Sobrenome</label>
                         <input type="text" class="form-control" disabled="" placeholder="Last Name" value="Pereira da Silva">
                       </div>
+                    </div>
+                      <div class="col-md-5 pl-1">
+                        <div class="form-group">
+                          <label>CPF</label>
+                          <input type="text" class="form-control" disabled="" placeholder="Last Name" value="420.331.188-86">
+                        </div>
                     </div>
                   </div>
                   <div class="row">
@@ -326,19 +336,19 @@ Coded by www.creative-tim.com
                     </div>
                   </div>
                   <div class="row">
-                    <div class="col-md-6 pr-1">
+                    <div class="col-md-4 pr-1">
                       <div class="form-group">
                         <label>Cidade</label>
                         <input type="text" class="form-control" disabled="" placeholder="City" value="Marília">
                       </div>
                     </div>
-                    <!--<div class="col-md-4 px-1">
+                    <div class="col-md-4 px-1">
                       <div class="form-group">
-                        <label>Country</label>
-                        <input type="text" class="form-control" placeholder="Country" value="Australia">
+                        <label>Estado</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Country" value="São Paulo">
                       </div>
-                    </div>-->
-                    <div class="col-md-6 pl-1">
+                    </div>
+                    <div class="col-md-4 pl-1">
                       <div class="form-group">
                         <label>Numero Pessoal</label>
                         <input type="text" class="form-control" id="inputNumber" disabled="" placeholder="selphone" value="(14) 99901-4563">
