--- a/pages/companies/form.html
+++ b/pages/companies/form.html
@@ -32,7 +32,7 @@
             <!-- <p>CT</p> -->
             </a>
             <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-            AllMed principal
+            MED-center principal
             <!-- <div class="logo-image-big">
                 <img src="../../assets/img/logo-big.png">
             </div> -->
@@ -169,19 +169,19 @@
                             <input type="email" class="form-control" id="inputEmail4" placeholder="Insira o Email">
                         </div>
                         <div class="form-group col-md-6">
-                        <label for="inputPassword4">Senha</label>
-                        <input type="password" class="form-control" id="inputPassword4" placeholder="Insira a Senha">
+                        <label for="inputEmpName">Nome da Empresa</label>
+                        <input type="text" class="form-control" id="inputPassword4" placeholder="Insira o nome da Empresa">
                         </div>
                     </div>
                     <div class="form-row">
-                        <div class="form-group col-md-12">
+                        <div class="form-group col-md-6">
                             <label for="inputCPNJ">CNPJ</label>
                             <input type="text" class="form-control" id="CPNJ">
                         </div>
-                    </div>
-                    <div class="form-row">
-                        <label for="inputAddress">Endereço</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="Ex: Av. Castro Alves, 322">
+                        <div class="form-group col-md-6">
+                            <label for="inputAddress">Endereço</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="Ex: Av. Castro Alves, 322">
+                        </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
@@ -201,7 +201,32 @@
                             <label for="inputState">Estado</label>
                             <select id="inputState" class="form-control">
                             <option selected>Selecione...</option>
-                            <option>...</option>
+                            <option>AC</option>
+                            <option>AL</option>
+                            <option>AM</option>
+                            <option>BA</option>
+                            <option>CE</option>
+                            <option>DF</option>
+                            <option>ES</option>
+                            <option>GO</option>
+                            <option>MA</option>
+                            <option>MT</option>
+                            <option>MS</option>
+                            <option>MG</option>
+                            <option>PA</option>
+                            <option>PB</option>
+                            <option>PR</option>
+                            <option>PE</option>
+                            <option>PI</option>
+                            <option>RJ</option>
+                            <option>RN</option>
+                            <option>RS</option>
+                            <option>RO</option>
+                            <option>RR</option>
+                            <option>SC</option>
+                            <option>SP</option>
+                            <option>SE</option>
+                            <option>TO</option>
                             </select>
                         </div>
                         <div class="form-row col-md-12">
@@ -221,7 +246,7 @@
                                     <option>Serviço público</option>
                                     <option>Prestação serviço</option>
                                 </select>
-                                </div>
+                            </div>
                             </div>
                         </div>
                     </div>
