--- a/pages/person/formUser.html
+++ b/pages/person/formUser.html
@@ -32,7 +32,7 @@
               <!-- <p>CT</p> -->
             </a>
             <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-              AllMed principal
+              MED-center principal
               <!-- <div class="logo-image-big">
                 <img src="../../assets/img/logo-big.png">
               </div> -->
@@ -183,17 +183,23 @@
                             <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
                             </div>
                     </div>
-                    <div class="form-group">
+                    <div class="form-row">
+                      <div class="form-group col-md-6">
                         <label for="inputAddress">Endereço</label>
                         <input type="text" class="form-control" id="inputAddress" placeholder="Ex: Av. Castro Alves, 322">
+                      </div>
+                      <div class="form-group col-md-6">
+                        <label for="inputCPF">CPF</label>
+                        <input type="number" class="form-control" id="inputCPF" placeholder="Insira o CPF">
+                      </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <label for="inpuntComp">complemento</label>
+                            <label for="inpuntComp">Complemento</label>
                             <input type="text" class="form-control" id="inputAddress" placeholder="Ex: Casa 71">
                         </div>
                         <div class="form-group col-md-6">
-                            <label for="inputCEP">CEP</label>
+                          <label for="inputCEP">CEP</label>
                             <input type="text" class="form-control" id="inputAddress">
                         </div>
                     </div>
@@ -206,9 +212,34 @@
                         <div class="form-group col-md-6">
                         <label for="inputState">Estado</label>
                         <select id="inputState" class="form-control">
-                            <option selected>Selecione...</option>
-                            <option>...</option>
-                        </select>
+                          <option selected>Selecione...</option>
+                          <option>AC</option>
+                          <option>AL</option>
+                          <option>AM</option>
+                          <option>BA</option>
+                          <option>CE</option>
+                          <option>DF</option>
+                          <option>ES</option>
+                          <option>GO</option>
+                          <option>MA</option>
+                          <option>MT</option>
+                          <option>MS</option>
+                          <option>MG</option>
+                          <option>PA</option>
+                          <option>PB</option>
+                          <option>PR</option>
+                          <option>PE</option>
+                          <option>PI</option>
+                          <option>RJ</option>
+                          <option>RN</option>
+                          <option>RS</option>
+                          <option>RO</option>
+                          <option>RR</option>
+                          <option>SC</option>
+                          <option>SP</option>
+                          <option>SE</option>
+                          <option>TO</option>
+                      </select>
                     </div>
                     <div class="form-row col-md-12">
                         <div class="form-group col-md-4">
