era para ter mais alterações no user só que me enrolei no html

--- a/pages/person/user.html
+++ b/pages/person/user.html
@@ -173,78 +173,30 @@ Coded by www.creative-tim.com
         <div class="row">
           <div class="col-md-4">
             <div class="card card-user">
-              <div class="image">
-                <img src="../../assets/img/damir-bosnjak.jpg" alt="...">
-              </div>
               <div class="card-body">
+                <div class="image">
+                  <img src="../../assets/img/damir-bosnjak.jpg" alt="...">
+                </div>
                 <div class="author">
                   <a href="#">
                     <img class="avatar border-gray" src="../../assets/img/its_me.jpeg" alt="...">
                     <h5 class="title">Murilo Pereira</h5>
                   </a>
-                  <p class="description">
-                    @chetfaker
-                  </p>
-                </div>
-                <p class="description text-center">
-                  "I like the way you work it <br>
-                  No diggity <br>
-                  I wanna bag it up"
-                </p>
-              </div>
-              <div class="card-footer">
-                <hr>
-                <div class="button-container">
-                  <div class="row">
-                    <div class="col-lg-5 col-md-6 col-6 ml-auto">
-                      <h5>21/04/1995<br><small>Data de Nascimento</small></h5>
-                    </div>
-                    <div class="col-lg-4 col-md-6 col-6 ml-auto mr-auto">
-                      <h5>2GB<br><small>Used</small></h5>
-                    </div>
-                    <div class="col-lg-3 mr-auto">
-                      <h5>24,6$<br><small>Spent</small></h5>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
             <div class="card">
               <div class="card-header">
-                <h4 class="card-title">Empresa</h4>
+                <h4 class="card-title">Contato Empresa</h4>
               </div>
               <div class="card-body">
                 <ul class="list-unstyled team-members">
                   <li>
                     <div class="row">
-                      <div class="col-md-2 col-2">
-                        <div class="avatar">
-                          <img src="../../assets/img/logo-unimed.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                        </div>
-                      </div>
-                      <div class="col-md-7 col-7">
-                        Unimed
-                        <br />
-                        <span class="text-muted"><small>Demitido</small></span>
-                        <br>
-                        <span class="text-muted"><small>Inicio 21/11/2015 Fim 21/08/20017</small>
-                      </div>
-                      <div class="col-md-3 col-3 text-right">
-                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="row">
-                      <div class="col-md-2 col-2">
-                        <div class="avatar">
-                          <img src="../../assets/img/faces/joe-gardner-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                        </div>
-                      </div>
                       <div class="col-md-7 col-7">
                         MED-center
                         <br />
-                        <span class="text-success"><small>Funcionário</small></span>
+                        <span><small>Função: Programador</small></span>
                         <br />
                         <span class="text-success"><small>Inicio 13/03/2020</small>
                       </div>
@@ -253,25 +205,30 @@ Coded by www.creative-tim.com
                       </div>
                     </div>
                   </li>
-                  <!--<li>
-                    <div class="row">
-                      <div class="col-md-2 col-2">
-                        <div class="avatar">
-                          <img src=" ../../assets/img/faces/clem-onojeghuo-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-                        </div>
-                      </div>
-                      <div class="col-ms-7 col-7">
-                        Flume
-                        <br />
-                        <span class="text-danger"><small>Busy</small></span>
-                      </div>
-                      <div class="col-md-3 col-3 text-right">
-                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
-                      </div>
-                    </div>
-                  </li>-->
                 </ul>
               </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <h4 class="card-title">Func. de Empresa</h4>
+              </div>
+              <div class="card-body">
+                <ul class="list-unstyled team-members">
+                  <li>
+                    <div class="row">
+                      <div class="col-md-7 col-7">
+                      Empresa: MED-Center
+                      <br />
+                      Inicio: 24/9/2020
+                      <br>
+                      Fim:
+                    </div>
+                    <div class="col-md-3 col-3 text-right">
+                      <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                    </div>
+                  </div>
+                </li>
+            </div>
             </div>
           </div>
           <div class="col-md-8">
