consegui fazer outro card

--- a/pages/person/user.html
+++ b/pages/person/user.html
@@ -172,16 +172,51 @@ Coded by www.creative-tim.com
       <div class="content">
         <div class="row">
           <div class="col-md-4">
-            <div class="card card-user">
-              <div class="card-body">
-                <div class="image">
-                  <img src="../../assets/img/damir-bosnjak.jpg" alt="...">
+            <div class="card">
+              <div class="card-header">
+                <div>
+                  <h4 class="card-title">Usuário do Sistema</h4>
                 </div>
-                <div class="author">
-                  <a href="#">
-                    <img class="avatar border-gray" src="../../assets/img/its_me.jpeg" alt="...">
-                    <h5 class="title">Murilo Pereira</h5>
+              </div>
+              <div class="card-body">
+                <div class="card-body">
+                  <ul class="list-unstyled team-members">
+                    <li>
+                      <div class="row">
+                        <div class="col-md-7 col-7">
+                          MED-center
+                          <br />
+                          <span><small>Função: Programador</small></span>
+                          <br />
+                          <span class="text-success"><small>Inicio 13/03/2020</small>
+                        </div>
+                        <div class="col-md-3 col-3 text-right">
+                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                        </div>
+                      </div>
+                    </li>
                   </a>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <div>
+                  <h4 class="card-title">Profissional</h4>
+                </div>
+                <div class="card-body">
+                  <ul class="list-unstyled team-members">
+                    <li>
+                      <div class="row">
+                        <div class="col-md-7 col-7">
+                          Sem registrto
+                        </div>
+                        <div class="col-md-3 col-3 text-right">
+                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -196,9 +231,9 @@ Coded by www.creative-tim.com
                       <div class="col-md-7 col-7">
                         MED-center
                         <br />
-                        <span><small>Função: Programador</small></span>
+                        <small>Função: Programador</small>
                         <br />
-                        <span class="text-success"><small>Inicio 13/03/2020</small>
+                        <small>Inicio 13/03/2020</small>
                       </div>
                       <div class="col-md-3 col-3 text-right">
                         <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
@@ -234,7 +269,7 @@ Coded by www.creative-tim.com
           <div class="col-md-8">
             <div class="card card-user">
               <div class="card-header">
-                <h5 class="card-title">Perfil</h5>
+                <h5 class="card-title">Perfil Pessoa Fisica</h5>
               </div>
               <div class="card-body">
                 <form>
