--- a/pages/person/listUser.html
+++ b/pages/person/listUser.html
@@ -60,45 +60,45 @@ Coded by www.creative-tim.com
             </a>
           </li>
           <li>
-            <a href="./icons.html">
+            <a href="#">
               <i class="nc-icon nc-diamond"></i>
               <p>Icons</p>
             </a>
           </li>
           <li>
-            <a href="./map.html">
+            <a href="#">
               <i class="nc-icon nc-pin-3"></i>
               <p>Maps</p>
             </a>
           </li>
           <li>
-            <a href="./notifications.html">
+            <a href="#">
               <i class="nc-icon nc-bell-55"></i>
               <p>Notificações</p>
             </a>
           </li>
-          <li>
-            <a href="../person/listUser.html">
+          <li class="active">
+            <a href="./listUser.html">
               <i class="nc-icon nc-single-02"></i>
               <p>Perfil do usuário</p>
             </a>
           </li>
-          <li class="active ">
+          <li>
             <a href="../companies/list.html">
-              <i class="nc-icon nc-tile-56"></i>
-              <p>Empresas</p>
+                <i class="nc-icon nc-tile-56"></i>
+                <p>Empresas</p>
             </a>
           </li>
           <li>
-            <a href="./typography.html">
-              <i class="nc-icon nc-caps-small"></i>
-              <p>Typography</p>
+            <a href="#">
+                <i class="nc-icon nc-caps-small"></i>
+                <p>Typography</p>
             </a>
-          </li>
-          <li class="active-pro">
-            <a href="./upgrade.html">
-              <i class="nc-icon nc-spaceship"></i>
-              <p>Upgrade to PRO</p>
+            </li>
+            <li class="active-pro">
+            <a href="#">
+                <i class="nc-icon nc-spaceship"></i>
+                <p>Upgrade to PRO</p>
             </a>
           </li>
         </ul>
@@ -172,55 +172,42 @@ Coded by www.creative-tim.com
       <div class="content">
         <div class="row">
             <div class="col-md-12">
-              <div class="card">
+                <div class="card">
                 <div class="card-header">
-                  <h4 class="card-title"> Empresas Cadastradas</h4>
+                    <h4 class="card-title">Pessoas Cadastradas</h4>
                 </div>
                 <div class="card-body">
-                  <div class="table-responsive">
+                    <div class="table-responsive">
                     <table class="table">
                       <thead class=" text-primary">
-                        <th> Nome Fantasia </th>
-                        <th> Endereço </th>
-                        <th> Email </th>
-                        <th> Segmento </th>
-                        <th> Funcionários </th>
-                        <th> CNPJ </th>
-                        <th> Telefone </th>
+                        <th>Nome</th>
+                        <th>Endereço</th>
+                        <th>Email</th>
+                        <th>Ocupação</th>
+                        <th>CPF</th>
+                        <th>Telefone</th>
                       </thead>
                       <tbody>
                         <tr>
-                          <td> Unimed </td>
-                          <td> Av. Vicente Ferreira, 828</td>
-                          <td> uni.med@gmail.com </td>
-                          <td> Saúde </td>
-                          <td> 15000 </td>
-                          <td> 02.812.468/0001-06 </td>
-                          <td> (14) 3432-1181 </td>
+                          <td><a href="user.html"> Murilo Pereira</a></td>
+                          <td>Rua Francisco Franco do Nascimento, 220</td>
+                          <td>murilo.ps0690@gmail.com</td>
+                          <td>Empregado</td>
+                          <td>420.331.188-86</td>
+                          <td> (14) 99901-4563</td>
                         </tr>
                         <tr>
-                          <td> Honda </td>
-                          <td> Av. das Esmeraldas, 1255 </td>
-                          <td> hon_d-a@gmail.com </td>
-                          <td> Automobilistica </td>
-                          <td> 18360 </td>
-                          <td> 01.192.333/0001-22 </td>
-                          <td> (14) 3422-5552 </td>
-                        </tr>
-                        <tr>
-                          <td> Casas Sol Decor </td>
-                          <td> Av. Castro Alves, 322 </td>
-                          <td> casas_decor@outlock.com </td>
-                          <td> Mobiliária </td>
-                          <td> 16015 </td>
-                          <td> 17.543.901/0002-03 </td>
-                          <td> (14) 3402-1918 </td>
+                          <td><a href="#">Edson Pereira</a></td>
+                          <td>Rua Francisco Franco do Nascimento, 220</td>
+                          <td>edpersil@gmail.com</td>
+                          <td>Empregado</td>
+                          <td>19097713846</td>
+                          <td> (14) 99634-6109</td>
                         </tr>
                       </tbody>
                     </table>
                     <p class="lead">
-                      <a class="btn btn-primary btn-lg" href="../companies/form.html" role="button">Adicionar Empresa</a>
-                        <small class="form-text text-muted">Registre sua Empresa ao nosso sistema, caso não esteja.</small>
+                        <a class="btn btn-primary btn-lg" href="./formUser.html" role="button">Adicionar Pessoa</a>
                     </p>
                   </div>
                 </div>
