--- a/pages/person/user.html
+++ b/pages/person/user.html
@@ -202,14 +202,19 @@ Coded by www.creative-tim.com
             <div class="card">
               <div class="card-header">
                 <div>
-                  <h4 class="card-title">Profissional</h4>
+                  <h4 class="card-title">Contato de Empresa</h4>
                 </div>
                 <div class="card-body">
                   <ul class="list-unstyled team-members">
                     <li>
                       <div class="row">
                         <div class="col-md-7 col-7">
-                          Sem registrto
+                          Emp. MED-center
+                          <br />
+                          Função: Programador
+                          <br/>
+                          <small>Inicio 13/03/2020</small>
+                          <br/>
                         </div>
                         <div class="col-md-3 col-3 text-right">
                           <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
@@ -222,18 +227,18 @@ Coded by www.creative-tim.com
             </div>
             <div class="card">
               <div class="card-header">
-                <h4 class="card-title">Contato Empresa</h4>
+                <h4 class="card-title">Func. de Empresa</h4>
               </div>
               <div class="card-body">
                 <ul class="list-unstyled team-members">
                   <li>
                     <div class="row">
                       <div class="col-md-7 col-7">
-                        MED-center
-                        <br />
-                        <small>Função: Programador</small>
+                        Emp. MED-center
                         <br />
                         <small>Inicio 13/03/2020</small>
+                        <br/>
+                        <small>Fim:</small>
                       </div>
                       <div class="col-md-3 col-3 text-right">
                         <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
@@ -245,18 +250,14 @@ Coded by www.creative-tim.com
             </div>
             <div class="card">
               <div class="card-header">
-                <h4 class="card-title">Func. de Empresa</h4>
+                <h4 class="card-title">Profissional</h4>
               </div>
               <div class="card-body">
                 <ul class="list-unstyled team-members">
                   <li>
                     <div class="row">
                       <div class="col-md-7 col-7">
-                      Empresa: MED-Center
-                      <br />
-                      Inicio: 24/9/2020
-                      <br>
-                      Fim:
+                      <b>Sem registro</b>
                     </div>
                     <div class="col-md-3 col-3 text-right">
                       <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
