--- a/pages/companies/form.html
+++ b/pages/companies/form.html
@@ -65,7 +65,7 @@
                 </a>
             </li>
             <li>
-                <a href="../person/formUser.html">
+                <a href="../person/listUser.html">
                 <i class="nc-icon nc-single-02"></i>
                 <p>perfil do usuário</p>
                 </a>
