--- a/pages/companies/companie.html
+++ b/pages/companies/companie.html
@@ -21,7 +21,7 @@ Coded by www.creative-tim.com
   <link rel="icon" type="image/png" href="../../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
-    MED-center site
+    MED-center
   </title>
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
   <!--     Fonts and icons     -->
@@ -45,9 +45,9 @@ Coded by www.creative-tim.com
           <!-- <p>CT</p> -->
         </a>
         <a href="https://www.creative-tim.com" class="simple-text logo-normal">
-          MED-center principal
+          MED-center
           <!-- <div class="logo-image-big">
-            <img src="../../assets/img/logo-big.png">
+            <img src="../assets/img/logo-big.png">
           </div> -->
         </a>
       </div>
@@ -60,13 +60,13 @@ Coded by www.creative-tim.com
             </a>
           </li>
           <li>
-            <a href="./icons.html">
+            <a href="../../examples/icons.html">
               <i class="nc-icon nc-diamond"></i>
               <p>Icons</p>
             </a>
           </li>
           <li>
-            <a href="./map.html">
+            <a href="../../examples/map.html">
               <i class="nc-icon nc-pin-3"></i>
               <p>Maps</p>
             </a>
@@ -80,17 +80,17 @@ Coded by www.creative-tim.com
           <li>
             <a href="../person/listUser.html">
               <i class="nc-icon nc-single-02"></i>
-              <p>Perfil do usuário</p>
+              <p>Perfil de usuário</p>
             </a>
           </li>
-          <li class="active ">
+          <li class="active">
             <a href="../companies/list.html">
               <i class="nc-icon nc-tile-56"></i>
               <p>Empresas</p>
             </a>
           </li>
           <li>
-            <a href="./typography.html">
+            <a href="../../examples/typography.html">
               <i class="nc-icon nc-caps-small"></i>
               <p>Typography</p>
             </a>
@@ -116,7 +116,7 @@ Coded by www.creative-tim.com
                 <span class="navbar-toggler-bar bar3"></span>
               </button>
             </div>
-            <a class="navbar-brand" href="javascript:;">Dashboard</a>
+            <a class="navbar-brand" href="javascript:;">Paper Dashboard 2</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-bar navbar-kebab"></span>
@@ -126,7 +126,7 @@ Coded by www.creative-tim.com
           <div class="collapse navbar-collapse justify-content-end" id="navigation">
             <form>
               <div class="input-group no-border">
-                <input type="text" value="" class="form-control" placeholder="pesquisa">
+                <input type="text" value="" class="form-control" placeholder="Search...">
                 <div class="input-group-append">
                   <div class="input-group-text">
                     <i class="nc-icon nc-zoom-split"></i>
@@ -151,7 +151,7 @@ Coded by www.creative-tim.com
                   </p>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="../person/formUser.html">Registrar</a>
+                  <a class="dropdown-item" href="#">Action</a>
                   <a class="dropdown-item" href="#">Another action</a>
                   <a class="dropdown-item" href="#">Something else here</a>
                 </div>
@@ -171,62 +171,161 @@ Coded by www.creative-tim.com
       <!-- End Navbar -->
       <div class="content">
         <div class="row">
-            <div class="col-md-12">
-              <div class="card">
-                <div class="card-header">
-                  <h4 class="card-title"> Empresas Cadastradas</h4>
+          <div class="col-md-4">
+            <div class="card">
+              <div class="card-header">
+                <div>
+                  <h4 class="card-title">Contato de Empresa</h4>
                 </div>
                 <div class="card-body">
-                  <div class="table-responsive">
-                    <table class="table">
-                      <thead class=" text-primary">
-                        <th> Nome Fantasia </th>
-                        <th> Endereço </th>
-                        <th> Email </th>
-                        <th> Segmento </th>
-                        <th> Funcionários </th>
-                        <th> CNPJ </th>
-                        <th> Telefone </th>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td><a href="./companie.html">Unimed</a></td>
-                          <td> Av. Vicente Ferreira, 828</td>
-                          <td> uni.med@gmail.com </td>
-                          <td> Saúde </td>
-                          <td> 15000 </td>
-                          <td> 02.812.468/0001-06 </td>
-                          <td> (14) 3432-1181 </td>
-                        </tr>
-                        <tr>
-                          <td> Honda </td>
-                          <td> Av. das Esmeraldas, 1255 </td>
-                          <td> hon_d-a@gmail.com </td>
-                          <td> Automobilistica </td>
-                          <td> 18360 </td>
-                          <td> 01.192.333/0001-22 </td>
-                          <td> (14) 3422-5552 </td>
-                        </tr>
-                        <tr>
-                          <td> Casas Sol Decor </td>
-                          <td> Av. Castro Alves, 322 </td>
-                          <td> casas_decor@outlock.com </td>
-                          <td> Mobiliária </td>
-                          <td> 16015 </td>
-                          <td> 17.543.901/0002-03 </td>
-                          <td> (14) 3402-1918 </td>
-                        </tr>
-                      </tbody>
-                    </table>
-                    <p class="lead">
-                      <a class="btn btn-primary btn-lg" href="../companies/form.html" role="button">Adicionar Empresa</a>
-                        <small class="form-text text-muted">Registre sua Empresa ao nosso sistema, caso não esteja.</small>
-                    </p>
-                  </div>
+                  <ul class="list-unstyled team-members">
+                    <li>
+                      <div class="row">
+                        <div class="col-md-7 col-7">
+                            <a href="../person/user.html">Murilo Pereira</a>
+                            <br/>
+                            <small>Inicio 13/03/2020</small>
+                        </div>
+                        <div class="col-md-3 col-3 text-right">
+                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
                 </div>
               </div>
             </div>
+            <div class="card">
+              <div class="card-header">
+                <h4 class="card-title">Func. de Empresa</h4>
+              </div>
+              <div class="card-body">
+                <ul class="list-unstyled team-members">
+                  <li>
+                    <div class="row">
+                      <div class="col-md-7 col-7">
+                        3 <b>Funcionários</b>
+                      </div>
+                      <div class="col-md-3 col-3 text-right">
+                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <h4 class="card-title">Profissional</h4>
+              </div>
+              <div class="card-body">
+                <ul class="list-unstyled team-members">
+                  <li>
+                    <div class="row">
+                      <div class="col-md-7 col-7">
+                      0 <b>vinculos</b>
+                    </div>
+                    <div class="col-md-3 col-3 text-right">
+                      <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                    </div>
+                  </div>
+                </li>
+            </div>
+            </div>
           </div>
+          <div class="col-md-8">
+            <div class="card card-user">
+              <div class="card-header">
+                <h5 class="card-title">Perfil Pessoa Jurídica</h5>
+              </div>
+              <div class="card-body">
+                <form>
+                  <div class="row">
+                    <div class="col-md-5 pr-1">
+                      <div class="form-group">
+                        <label>Código</label>
+                        <input type="code" class="form-control" disabled="" placeholder="Company" value="1651FD">
+                      </div>
+                    </div>
+                    <div class="col-md-3 px-1">
+                      <div class="form-group">
+                        <label>Segmento</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Username" value="Sáude">
+                      </div>
+                    </div>
+                    <div class="col-md-4 pl-1">
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">Email</label>
+                        <input type="email" class="form-control" disabled="" placeholder="med_cen@gmail.com">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6 pr-1">
+                      <div class="form-group">
+                        <label>Nome Fantasia</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Company" value="MED-center">
+                      </div>
+                    </div>
+                    <div class="col-md-6 pl-1">
+                        <div class="form-group">
+                          <label>CNPJ</label>
+                          <input type="text" class="form-control" disabled="" placeholder="Last Name" value="420.331.188-86">
+                        </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6 pr-1">
+                      <div class="form-group">
+                        <label>Endereço</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Home Address" value="Rua Francisco Franco do Nascimento 220">
+                      </div>
+                    </div>
+                    <div class="col-md-6 pl-1">
+                      <div class="form-group">
+                        <label>Complemento</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Home Address" value="Casa 71">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-4 pr-1">
+                      <div class="form-group">
+                        <label>Cidade</label>
+                        <input type="text" class="form-control" disabled="" placeholder="City" value="Marília">
+                      </div>
+                    </div>
+                    <div class="col-md-4 px-1">
+                      <div class="form-group">
+                        <label>Estado</label>
+                        <input type="text" class="form-control" disabled="" placeholder="Country" value="São Paulo">
+                      </div>
+                    </div>
+                    <div class="col-md-4 pl-1">
+                      <div class="form-group">
+                        <label>Numero Pessoal</label>
+                        <input type="text" class="form-control" id="inputNumber" disabled="" placeholder="selphone" value="(14) 99901-4563">
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label>Obsevação</label>
+                        <textarea class="form-control textarea" disabled="">Saudavel</textarea>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="update ml-auto mr-auto">
+                      <button type="submit" class="btn btn-primary btn-round"><a href="form.html" style="color: white;"> Atualizar perfil</a></button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <footer class="footer footer-black  footer-white ">
         <div class="container-fluid">
@@ -264,12 +363,6 @@ Coded by www.creative-tim.com
   <!-- Control Center for Now Ui Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../../assets/js/paper-dashboard.min.js?v=2.0.1" type="text/javascript"></script><!-- Paper Dashboard DEMO methods, don't include it in your project! -->
   <script src="../../assets/demo/demo.js"></script>
-  <script>
-    $(document).ready(function() {
-      // Javascript method's body can be found in assets/assets-for-demo/js/demo.js
-      demo.initChartsPages();
-    });
-  </script>
 </body>
 
 </html>
