--- a/pages/companies/form.html
+++ b/pages/companies/form.html
@@ -192,7 +192,7 @@
                             <label for="inputCEP">CEP</label>
                             <input type="text" class="form-control" id="inputAddress">
                         </div>
-                    <div class="form-row">
+                    <div class="form-row col-md-12">
                         <div class="form-group col-md-6">
                             <label for="inputCity">Cidade</label>
                             <input type="text" class="form-control" id="inputCity">
@@ -230,27 +230,24 @@
                             </select>
                         </div>
                         <div class="form-row col-md-12">
-                            <div class="form-group col-md-4">
-                                <label for="inputNumber">Telefone da Empresa</label>
-                                <input type="number" class="form-control" id="inputNumber">
-                            </div>
+                                <div class="form-group col-md-6">
+                                    <label for="inputNumber">Telefone da Empresa</label>
+                                    <input type="number" class="form-control" id="inputNumber">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="inputState">Segmento</label>
+                                    <select id="inputState" class="form-control">
+                                        <option selected>Selecione...</option>
+                                        <option>Comércio</option>
+                                        <option>Indústria</option>
+                                        <option>Saúde</option>
+                                        <option>Serviço público</option>
+                                        <option>Prestação serviço</option>
+                                    </select>
+                                </div>
+                            </diV>
                         </div>
-                        <div class="form-row col-md-12">
-                            <div class="form-group col-md-4">
-                                <label for="inputState">Segmento</label>
-                                <select id="inputState" class="form-control">
-                                    <option selected>Selecione...</option>
-                                    <option>Comércio</option>
-                                    <option>Indústria</option>
-                                    <option>Saúde</option>
-                                    <option>Serviço público</option>
-                                    <option>Prestação serviço</option>
-                                </select>
-                            </div>
-                            </div>
-                        </div>
-                    </div>
-                    <button type="submit" class="btn btn-primary"><a href="../dashboard.html" style="color: white;">Cadastrar</a></button>
+                    <button type="submit" class="btn btn-primary"><a href="companie.html" style="color: white;">Cadastrar</a></button>
                 </form>
                 </div>
             </div>
