--- a/pages/person/relacionamento/contact.html
+++ b/pages/person/relacionamento/contact.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/apple-icon.png">
-  <link rel="icon" type="image/png" href="../../assets/img/favicon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="../../../assets/img/apple-icon.png">
+  <link rel="icon" type="image/png" href="../../../assets/img/favicon.png">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>
     Cadastrar Pessoa
@@ -14,11 +14,11 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
   <!-- CSS Files -->
-  <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../../assets/css/paper-dashboard.css?v=2.0.1" rel="stylesheet" />
+  <link href="../../../assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="../../../assets/css/paper-dashboard.css?v=2.0.1" rel="stylesheet" />
 <!-- CSS Just for demo purpose, don't include it in your project -->
-<link href="../../assets/demo/demo.css" rel="stylesheet" />
-<link href="../../assets/css/style/singin.css" rel="stylesheet" type="text/css"/>
+<link href="../../../assets/demo/demo.css" rel="stylesheet" />
+<link href="../../../assets/css/style/singin.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
           <div class="logo">
             <a href="https://www.creative-tim.com" class="simple-text logo-mini">
               <div class="logo-image-small">
-                <img src="../../assets/img/logo-small.png">
+                <img src="../../../assets/img/logo-small.png">
               </div>
               <!-- <p>CT</p> -->
             </a>
@@ -41,7 +41,7 @@
           <div class="sidebar-wrapper">
             <ul class="nav">
               <li>
-                <a href="../dashboard.html">
+                <a href="../../dashboard.html">
                   <i class="nc-icon nc-bank"></i>
                   <p>inicio</p>
                 </a>
