inicio da relacionamento, acabou ficando inconpleto

--- a/pages/person/relationship/contact.html
+++ b/pages/person/relationship/contact.html
@@ -126,7 +126,7 @@
                     <a class="nav-link btn-magnify" href="javascript:;">
                     <i class="nc-icon nc-layout-11"></i>
                     <p>
-                        <span class="d-lg-none d-md-block">Stats</span>
+                      <span class="d-lg-none d-md-block">Stats</span>
                     </p>
                     </a>
                 </li>
@@ -134,7 +134,7 @@
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <i class="nc-icon nc-bell-55"></i>
                     <p>
-                        <span class="d-lg-none d-md-block">Some Actions</span>
+                      <span class="d-lg-none d-md-block">Some Actions</span>
                     </p>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
@@ -147,7 +147,7 @@
                     <a class="nav-link btn-rotate" href="javascript:;">
                     <i class="nc-icon nc-settings-gear-65"></i>
                     <p>
-                        <span class="d-lg-none d-md-block">Account</span>
+                      <span class="d-lg-none d-md-block">Account</span>
                     </p>
                     </a>
                 </li>
@@ -159,34 +159,38 @@
         <div class="row justify-content-center">
             <div class="card col-sm-12 " id="card-login">
                 <div class="card-header">
-                    <h3>Pessoa Física</h3>
+                  <h3>Pessoa Física</h3>
                 </div>
                 <div class="card-body">
                 <form>
                     <div class="form-row">
                         <div class="col">
-                            <label for="inputName">Nome</label>
-                            <input type="name" class="form-control" id="Name" placeholder="Insira seu Nome">
+                          <label for="inputName">Código</label>
+                          <input type="name" class="form-control" id="Name" placeholder="Insira seu Código de Perfil">
                         </div>
                         <div class="col">
-                            <label for="inputEmail4">Sobrenome</label>
-                            <input type="name" class="form-control" id="inputEmail4" placeholder="Insira seu Sobrenome">
+                            <label>Acesso as Informações da Empresa</label>
+                            <select for="active" class="form-control">
+                            <option selected> Nenhum</option>
+                              <option>Ativo</option>
+                            </select>
                         </div>
                     </div>
                         <div class="form-row">
                             <div class="form-group col-md-6">
-                                <label for="inputEmail4">Email</label>
-                                <input type="email" class="form-control" id="lastName" placeholder="Email">
+                              <label for="inputName">Nome</label>
+                                <input type="name" class="form-control" id="Name" placeholder="Insira seu Nome de usuário">
                             </div>
                             <div class="form-group col-md-6">
                             <label for="inputPassword4">Senha</label>
                             <input type="password" class="form-control" id="inputPassword4" placeholder="Senha">
                             </div>
                     </div>
+                    <h5>Contato</h5>
                     <div class="form-row">
                       <div class="form-group col-md-6">
-                        <label for="inputAddress">Endereço</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="Ex: Av. Castro Alves, 322">
+                        <label for="inputempCode">Código da Empresa</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="Insira o código da Empresa">
                       </div>
                       <div class="form-group col-md-6">
                         <label for="inputCPF">CPF</label>
