--- a/pages/person/user.html
+++ b/pages/person/user.html
@@ -186,7 +186,7 @@ Coded by www.creative-tim.com
                         <div class="col-md-7 col-7">
                         </div>
                         <div class="col-md-3 col-3 text-right">
-                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listRelation.html"><i class="fa fa-envelope"></i></a>></btn>
                         </div>
                       </div>
                     </li>
@@ -212,7 +212,7 @@ Coded by www.creative-tim.com
                           <br/>
                         </div>
                         <div class="col-md-3 col-3 text-right">
-                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                          <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="relationship/listRelation.html"><i class="fa fa-envelope"></i></a></btn>
                         </div>
                       </div>
                     </li>
@@ -236,7 +236,7 @@ Coded by www.creative-tim.com
                         <small>Fim:</small>
                       </div>
                       <div class="col-md-3 col-3 text-right">
-                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                        <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listRelation.html"><i class="fa fa-envelope"></i></a></btn>
                       </div>
                     </div>
                   </li>
@@ -255,7 +255,7 @@ Coded by www.creative-tim.com
                       <b>Sem registro</b>
                     </div>
                     <div class="col-md-3 col-3 text-right">
-                      <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><i class="fa fa-envelope"></i></btn>
+                      <btn class="btn btn-sm btn-outline-success btn-round btn-icon"><a href="./relationship/listRelation.html"><i class="fa fa-envelope"></i></a></btn>
                     </div>
                   </div>
                 </li>
